# stable-project-template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
cmake/: MyProjectConfig.cmake.in
lib1/: CMakeLists.txt
lib1/include/MyProject/lib1/: lib1.h
lib1/src/: lib1.cpp  lib1_private.h
lib1/tests/: CMakeLists.txt  ut.cpp
lib2/: CMakeLists.txt
lib2/include/MyProject/lib2/: lib2.h
lib2/tests/: CMakeLists.txt  ut.cpp
tests/: CMakeLists.txt  it.cpp
